# FRI

./: .gitignore  .gitignore.bad
SecondYear/C_final/: CMakeLists.txt
SecondYear/C_final/01_day/: a.out  firstProgram  fourthProgram  fourthProgram.c  secondProgram  thirdProgram  thirdProgram.c
SecondYear/C_final/01_day/01_Naloge/: fibbonacci.c  pozdrav.c
SecondYear/C_final/01_day/01_Naloge/fibbonacci.dSYM/Contents/Resources/DWARF/: fibbonacci
SecondYear/C_final/01_day/01_Naloge/fibbonacci.dSYM/Contents/Resources/Relocations/aarch64/: fibbonacci.yml
SecondYear/C_final/01_day/01_Naloge/pozdrav.dSYM/Contents/: Info.plist
SecondYear/C_final/01_day/01_pi.dSYM/Contents/: Info.plist
SecondYear/C_final/01_day/firstProgram.dSYM/Contents/Resources/DWARF/: firstProgram
SecondYear/C_final/01_day/secondProgram.dSYM/Contents/Resources/DWARF/: secondProgram
SecondYear/C_final/02_day/Naloge/: obratno.c
SecondYear/C_final/02_day/Predavanje/: dolzina  gambler  scan  scan.c  test
SecondYear/C_final/02_day/Predavanje/getChar.dSYM/Contents/Resources/DWARF/: getChar
SecondYear/C_final/03_day/Naloge/: StiriVVrsto  stevke  stevke.c
SecondYear/C_final/03_day/Naloge/StiriVVrsto.dSYM/Contents/Resources/DWARF/: StiriVVrsto
SecondYear/C_final/03_day/Predavanje/: atoi  sinus.c  switch.c
SecondYear/C_final/04_day/Naloge/: bitki.c  wc  wc.c  wc_test.txt
SecondYear/C_final/04_day/Naloge/samples/: test7.txt
SecondYear/C_final/04_day/Predavanje/: biti.c  branje.c  prepisi.c  toUpper  velike.txt
SecondYear/C_final/05_day/Naloge/: histogram.c  tocke.c
SecondYear/C_final/05_day/Predavanje/: loto  struct
SecondYear/C_final/06_day/Naloge/: skladTestiranje
SecondYear/C_final/06_day/Predavanje/: absolutnoNaslavljanje  absolutnoNaslavljanje.c  strlen  tabela  tabela.c  zamenjaj  zamenjaj.c  zamenjajTab  zamenjajTab.c
SecondYear/C_final/06_day/Predavanje/absolutnoNaslavljanje.dSYM/Contents/: Info.plist
SecondYear/C_final/06_day/Predavanje/absolutnoNaslavljanje.dSYM/Contents/Resources/DWARF/: absolutnoNaslavljanje
SecondYear/C_final/07_day/Naloge/: imenik.c
SecondYear/C_final/07_day/Naloge/imenik.dSYM/Contents/: Info.plist
SecondYear/C_final/07_day/Predavanje/: branje  branje.c  realloc.c  scr  scr.c  strtok
SecondYear/C_final/08_day/Naloge/: seznam.c
SecondYear/C_final/08_day/Predavanje/: mergeSort  mergeSort.c  tabelaStudentov
SecondYear/C_final/09_day/: bmp.c
SecondYear/C_final/izpit/: naloga11  naloga11.c  naloga12  naloga13.c
SecondYear/C_final/izpit/naloga11.dSYM/Contents/Resources/Relocations/aarch64/: naloga11.yml
SecondYear/C_final/vaje/: test.c
(+209 files in other folders)
