cmake_minimum_required(VERSION 4.0)
project(C_final)

set(CMAKE_CXX_STANDARD 20)

add_executable(C_final main.cpp
        03_day/Predavanje/kodirnik.c
        03_day/Predavanje/kodiranje.c
        03_day/Predavanje/tipi.c
        03_day/Predavanje/sinus.c
        03_day/Naloge/stevke.c
        03_day/Naloge/StiriVVrsto.c)
