cmake_minimum_required(VERSION 4.0)
project(C_final)

set(CMAKE_CXX_STANDARD 20)

add_executable(C_final main.cpp
        03_day/Predavanje/kodirnik.c
        03_day/Predavanje/kodiranje.c
        03_day/Predavanje/tipi.c
        03_day/Predavanje/sinus.c
        03_day/Naloge/stevke.c
        03_day/Naloge/StiriVVrsto.c
        04_day/Predavanje/branje.c
        04_day/Predavanje/prepisi.c
        04_day/Predavanje/cat.c
        04_day/Predavanje/toUpper.c
        04_day/Predavanje/biti.c
        04_day/Naloge/bitki.c
        04_day/Naloge/wc.c
        05_day/Predavanje/loto.c
        05_day/Predavanje/struct.c
        05_day/Naloge/tocke.c
        05_day/Naloge/histogram.c)
