cmake_minimum_required(VERSION 4.0)
project(C_final)

set(CMAKE_CXX_STANDARD 20)

add_executable(C_final main.cpp
        03_day/Predavanje/kodirnik.c
        03_day/Predavanje/kodiranje.c
        03_day/Predavanje/tipi.c
        03_day/Predavanje/sinus.c
        03_day/Naloge/stevke.c
        03_day/Naloge/StiriVVrsto.c
        04_day/Predavanje/branje.c
        04_day/Predavanje/prepisi.c
        04_day/Predavanje/cat.c
        04_day/Predavanje/toUpper.c
        04_day/Predavanje/biti.c
        04_day/Naloge/bitki.c
        04_day/Naloge/wc.c
        05_day/Predavanje/loto.c
        05_day/Predavanje/struct.c
        05_day/Naloge/tocke.c
        05_day/Naloge/histogram.c
        06_day/Predavanje/absolutnoNaslavljanje.c
        06_day/Predavanje/tabela.c
        06_day/Predavanje/strlen.c
        06_day/Predavanje/zamenjaj.c
        06_day/Predavanje/zamenjajTab.c
        06_day/Naloge/sklad.c
        06_day/Naloge/skladTestiranje.c
        07_day/Predavanje/realloc.c
        07_day/Predavanje/branje.c
        07_day/Predavanje/scr.c
        07_day/Predavanje/strtok.c
        07_day/Predavanje/qsort..c
        07_day/Naloge/imenik.c
        08_day/Predavanje/mergeSort.c
        08_day/Predavanje/tabelaStudentov.cpp
        08_day/Naloge/seznam.c
        09_day/bmp.c
        vaje/test.c
        vaje/inputs.c
        izpit/naloga12.c
        izpit/naloga13.c
        izpit/naloga11.c)
